--- a/index.html
+++ b/index.html
@@ -167,12 +167,12 @@
 				<h2>&lt;portfolio&gt;<span class="blink">|</span></h2>
 				<div class="row center">
 					<div class="col-sm-4">
-						<a href="https://web.njit.edu/~km487/202/A3/A3.html" target="_blank"><img src="images/ajax-weather.PNG" alt="Weather App" style="width:100%;"  class="shadow"></a>
+						<a href="https://web.njit.edu/~km487/202/A3/A3.html" target="_blank"><img src="images/ajax-weather.jpg" alt="Weather App" style="width:100%;"  class="shadow"></a>
 						<p class="footnote-white">Skills Used: HTML, CSS, JS &amp; jQuery, AJAX</p>
 					</div>
 					<div class="col-sm-4">
 			
-						<a href="https://web.njit.edu/~km487/is218/project4" target="_blank"><img src="images/vote-app.PNG" alt="voting dashboard" style="width:100%;"  class="shadow"></a>
+						<a href="https://web.njit.edu/~km487/is218/project4" target="_blank"><img src="images/vote-app.jpg" alt="voting dashboard" style="width:100%;"  class="shadow"></a>
 						<p class="footnote-white">Skills Used: HTML, CSS, PHP, MySQL, UI/UX</p>
 					</div>
 					<div class="col-sm-4">
