--- a/index.html
+++ b/index.html
@@ -182,6 +182,18 @@
 				</div>
 			</div>
 		</div><!-- end portfolio -->
+	
+<div id="contact" class="scroll">
+	<div class="container-fluid">
+		<h2>&lt;contact&gt;<span class="blink">|</span></h2>
+			<div class="row center center-2">
+				<div class="col-sm-12">
+					<p>krutimistry79@gmail.com</p>
+				</div>
+			</div>
+	</div>
+</div><!-- end contact -->
+
 </div><!-- end wrapper -->
   <script src='https://code.jquery.com/jquery-2.2.4.min.js'></script>
 <script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js'></script>
