contact email added

--- a/index.html
+++ b/index.html
@@ -182,21 +182,42 @@
 				</div>
 			</div>
 		</div><!-- end portfolio -->
-	
-<div id="contact" class="scroll">
-	<div class="container-fluid">
-		<h2>&lt;contact&gt;<span class="blink">|</span></h2>
-			<div class="row center center-2">
-				<div class="col-sm-12">
-					<p>krutimistry79@gmail.com</p>
+
+		<div id="contact" class="scroll">
+			
+			<div class="container-fluid">
+				<h2>&lt;contact&gt;<span class="blink">|</span></h2>
+				<div class="row center center-2">
+					<div class="col-sm-12">
+						<p style="text-align:center;">krutimistry79@gmail.com</p>
+						
+<!---
+	<p>Contact below</p>
+  <form action="http://vanessa-smith.com/codecamp/contact.php" name="contactform" method="post" role="form">
+		<div class="form-group">
+  <label for="usr">Name:</label>
+  <input type="text" name="name" class="form-control" id="usr" placeholder="Your name" autocomplete="off">
+</div>
+    <div class="form-group">
+      <label for="email">Email:</label>
+      <input type="email" name="email" class="form-control" id="email" placeholder="Enter email" autocomplete="off">
+    </div>
+    <div class="form-group">
+  <label for="message">Message:</label>
+  <textarea name="message" class="form-control" rows="5" id="message"></textarea>
+</div>
+		<button type="submit" class="btn btn-block"><i class="fa fa-envelope-o fa-x5" aria-hidden="true"></i>&nbsp; &nbsp;Send Your Message</button>
+  </form>
+ ---->
+					</div>
 				</div>
 			</div>
-	</div>
-</div><!-- end contact -->
-
+		</div><!-- end contact -->
 </div><!-- end wrapper -->
   <script src='https://code.jquery.com/jquery-2.2.4.min.js'></script>
 <script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js'></script>
+
+  
 
     <script  src="js/index.js"></script>
 
