--- a/index.html
+++ b/index.html
@@ -69,19 +69,13 @@
 				
 				<div class="skills">
 					<h3>&lt;skills&gt;</h3>
-					<h4>HTML</h4>
+					<h4>HTML/CSS/Bootstrap</h4>
 					<div class="progress">
 						<div class="progress-bar progress-bar-striped active teal" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%">
 							<span>90%</span>
 						</div>
 					</div>
-					<h4>CSS/Bootstrap</h4>
-					<div class="progress">
-						<div class="progress-bar progress-bar-striped active teal" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width:85%">
-							<span>85%</span>
-						</div>
-					</div>
-					<h4>UI &amp; UX - including Adobe Photoshop and Illustrator</h4>
+					<h4>UI &amp; UX skills - including Adobe Photoshop and Illustrator</h4>
 					<div class="progress">
 						<div class="progress-bar progress-bar-striped active teal" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%">
 							<span>80%</span>
@@ -89,18 +83,41 @@
 					</div>
 					<h4>MySQL</h4>
 					<div class="progress">
-						<div class="progress-bar progress-bar-striped active teal" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%">
+						<div class="progress-bar progress-bar-striped active teal" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width:80%">
 							<span>75%</span>
 						</div>
 					</div>
 					<h4>PHP</h4>
 					<div class="progress">
-						<div class="progress-bar progress-bar-striped active teal" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width:75%">
+						<div class="progress-bar progress-bar-striped active teal" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:75%">
 							<span>70%</span>
 						</div>
-					
 					</div>
 					<h4>JavaScript &amp; jQuery</h4>
+					<div class="progress">
+						<div class="progress-bar progress-bar-striped active teal" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width:60%">
+							<span>60%</span>
+						</div>
+					</div>
+					<h4>Wordpress</h4>
+					<div class="progress">
+						<div class="progress-bar progress-bar-striped active teal" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:80%">
+							<span>70%</span>
+						</div>
+					</div>
+					<h4>Drupal</h4>
+					<div class="progress">
+						<div class="progress-bar progress-bar-striped active teal" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:75%">
+							<span>70%</span>
+						</div>
+					</div>
+					<h4>React</h4>
+					<div class="progress">
+						<div class="progress-bar progress-bar-striped active teal" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width:60%">
+							<span>60%</span>
+						</div>
+					</div>
+					<h4>Vue.js</h4>
 					<div class="progress">
 						<div class="progress-bar progress-bar-striped active teal" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width:60%">
 							<span>60%</span>
@@ -161,20 +178,40 @@
 			<div class="container-fluid">
 				<h2>&lt;portfolio&gt;<span class="blink">|</span></h2>
 				<div class="row center">
+					<!--new projects--->
 					<div class="col-sm-4">
+						<h5>My Favorite Movies - IMBD List</h5>
+						<a href="https://krutimistry-p3.herokuapp.com/index.html" target="_blank"><img src="images/imbd.PNG" alt="IMBD Top 8 Movies" style="width:100%;"  class="shadow"></a>
+						<p class="footnote-white">Skills Used: Vue.js, JSON, &amp; jQuery</p>
+					</div>
+					<div class="col-sm-4">
+						<h5>React - Task Manager</h5>
+						<a href="https://github.com/GranerSarah/IS322ReactApp" target="_blank"><img src="images/taskmanager.PNG" alt="Task Manager" style="width:100%;"  class="shadow"></a>
+						<p class="footnote-white">Skills Used: React.js</p>
+					</div>
+					<div class="col-sm-4">
+						<h5>Redux Banking Application</h5>
+						<a href="https://github.com/krutimistry/IS322-FinalProject" target="_blank"><img src="images/bankingapp.PNG" alt="Banking Application" style="width:100%;"  class="shadow"></a>
+						<p class="footnote-white">Skills Used: HTML, CSS, Redux</p>
+					</div>
+					<!--older projects-->
+					<div class="col-sm-4">
+						<h5>Weather App</h5>
 						<a href="https://web.njit.edu/~km487/202/A3/A3.html" target="_blank"><img src="images/ajax-weather.jpg" alt="Weather App" style="width:100%;"  class="shadow"></a>
 						<p class="footnote-white">Skills Used: HTML, CSS, JS &amp; jQuery, AJAX</p>
 					</div>
 					<div class="col-sm-4">
-			
+						<h5>Question/Answer Site</h5>
 						<a href="https://web.njit.edu/~km487/is218/project4" target="_blank"><img src="images/vote-app.jpg" alt="voting dashboard" style="width:100%;"  class="shadow"></a>
 						<p class="footnote-white">Skills Used: HTML, CSS, PHP, MySQL, UI/UX</p>
 					</div>
 					<div class="col-sm-4">
-					<img src="images/topdown.jpg" alt="game development" style="width:100%;" class="shadow"></a>
+						<h5>2D TopDown Game</h5>
+						<img src="images/topdown.jpg" alt="game development" style="width:100%;" class="shadow"></a>
 						<p class="footnote-white">Skills Used: C#, Made with Unity</p>
-				</div>
-				</div>
+					</div>
+
+
 			</div>
 		</div><!-- end portfolio -->
 
