--- a/index.html
+++ b/index.html
@@ -143,6 +143,8 @@
 				<li>Track all EST affiliate deliveries using HBO internal software tool “COP”.
 				<li>Transfer internal MSO Launch data and documents to newly created Launch dashboard document repository. 
 				<li>Participate in weekly conference calls with vendors/affiliates pertaining to current asset deliveries.
+				</li>
+					<br><img src="images/hbogang.jpg" style="width:50%;" class="shadow"></a>
 				</ul>
 				 
 				<h3>Marty's Shoes - Sales Assistant<span> - 2012-2013</span></h3>
@@ -187,7 +189,7 @@
 					<div class="col-sm-4">
 						<h5>React - Task Manager</h5>
 						<a href="https://github.com/GranerSarah/IS322ReactApp" target="_blank"><img src="images/taskmanager.PNG" alt="Task Manager" style="width:100%;"  class="shadow"></a>
-						<p class="footnote-white">Skills Used: React.js</p>
+						<p class="footnote-white">Skills Used: React.js, JSON Server</p>
 					</div>
 					<div class="col-sm-4">
 						<h5>Redux Banking Application</h5>
@@ -195,6 +197,16 @@
 						<p class="footnote-white">Skills Used: HTML, CSS, Redux</p>
 					</div>
 					<!--older projects-->
+					<div class="col-sm-4">
+						<h5>Deployment System Server </h5>
+						<a href="" target="_blank"><img src="images/apache.jpg" alt="" style="width:100%;"  class="shadow"></a>
+						<p class="footnote-white">Skills Used: Linux, PHP, MySQL, router static IPs.</p>
+					</div>
+					<div class="col-sm-4">
+						<h5>HBO's Water Tracking Site</h5>
+						<a href="https://web.njit.edu/~km487/daily-tracker/trackerlogin.html" target="_blank"><img src="images/hboWater.PNG" alt="" style="width:100%;"  class="shadow"></a>
+						<p class="footnote-white">Skills Used: HTML, Bootstrap, PHP, MySQL, UI/UX</p>
+					</div>
 					<div class="col-sm-4">
 						<h5>Weather App</h5>
 						<a href="https://web.njit.edu/~km487/202/A3/A3.html" target="_blank"><img src="images/ajax-weather.jpg" alt="Weather App" style="width:100%;"  class="shadow"></a>
@@ -210,7 +222,6 @@
 						<img src="images/topdown.jpg" alt="game development" style="width:100%;" class="shadow"></a>
 						<p class="footnote-white">Skills Used: C#, Made with Unity</p>
 					</div>
-
 
 			</div>
 		</div><!-- end portfolio -->
