image jpg changed

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 				<li>Transfer internal MSO Launch data and documents to newly created Launch dashboard document repository. 
 				<li>Participate in weekly conference calls with vendors/affiliates pertaining to current asset deliveries.
 				</li>
-					<br><img src="images/hbogang.jpg" style="width:50%;" class="shadow"></a>
+					<br><img src="images/hbogang.JPG" style="width:50%;" class="shadow"></a>
 				</ul>
 				 
 				<h3>Marty's Shoes - Sales Assistant<span> - 2012-2013</span></h3>
