--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 			</div>
 	
 			<div class="col-sm-8">
-				<p>A undergraduate student attending New Jersey Institute of Technology. Aiming to expand my knowledge of Information Technology to work in a dynamic professional environment and utilize my creativity and innovative thinking to benefit the organization and myself. Using a combination of formal schooling and self-learning to design web apps for over four years. I love coding, painting, and retro video games.</p>
+				<p>A New Jersey Institute of Technology graduate aiming to expand my knowledge of Information Technology to work in a dynamic professional environment and utilize my creativity and innovative thinking to benefit the organization and myself. Using a combination of formal schooling and self-learning to design web apps for over four years. I love coding, painting, and retro video games.</p>
 				<p>NJ/NY Based</p>
 				
 				<div class="skills">
